[package]
name = "research_project_two"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.11.3"
isahc = "1.0"
serde_json = "1.0"
paho-mqtt = "0.9"
azure_iot_sdk = { version = "0.7.1", features = ["c2d-messages", "direct-methods", "twin-properties", "error-handling-messages"], default-features = false }
tokio = "1.0.2"
futures = "0.3"